# ycPhoto

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  ycPhoto.c  ycPhoto.h
